# PatchedModrinth

./: CLAUDE.md  MAINTAINING.md  README.md
.github/workflows/: fork-build.yml  fork-release.yml
apps/app/: build.rs
apps/app-frontend/src/: App.vue  routes.js
apps/app-frontend/src/components/ui/settings/: AppearanceSettings.vue  PluginsSettings.vue
apps/app-frontend/src/pages/: Servers.vue
apps/app-frontend/src/pages/instance/: Index.vue
apps/app-frontend/src/plugins/: update-check.js
apps/app-frontend/src/store/: theme.ts
apps/app/src/api/: addons.rs
fork/installer/: .gitignore  bytelauncher-installer.nsi  download.ps1
fork/shim/: Cargo.toml  build.rs
fork/shim/src/: main.rs
